--- a/scss/style.scss
+++ b/scss/style.scss
@@ -325,7 +325,7 @@ a {
 
 .main-slider {
   .swiper-slide {
-    height: 680px;
+    height: 100vh;
     background-size: cover !important;
     text-align: center;
     color: #fff;
@@ -378,6 +378,8 @@ a {
   }
 
   .swiper-pagination {
+    bottom: 30px;
+
     .swiper-pagination-bullet {
       border-radius: 0;
       width: 6px;
@@ -386,6 +388,7 @@ a {
       opacity: 0.5;
       @include transition;
     }
+
     .swiper-pagination-bullet-active {
       width: 20px;
       opacity: 1;
@@ -1115,5 +1118,228 @@ a {
 
   &.open {
     right: 0;
+  }
+}
+
+.heading {
+  height: 400px;
+  background: url("../img/heading_bg.jpg") no-repeat center center;
+  background-size: cover;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  h1 {
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 16px;
+  }
+
+  p {
+    max-width: 730px;
+    font-size: 16px;
+    margin: 0 auto;
+  }
+}
+
+.breadcrumb {
+  padding: 24px 0;
+  margin-bottom: 20px;
+
+  .breadcrumb-item {
+
+    &+.breadcrumb-item {
+      padding-left: 16px;
+
+      &::before {
+        content: '';
+        width: 20px;
+        height: 20px;
+        background: url("../img/arrow-bc.svg") no-repeat center center;
+        background-size: contain;
+        padding-right: 20px;
+        margin-right: 16px;
+      }
+    }
+
+    &.active {
+      color: #009444;
+    }
+
+    a {
+      color: #757575;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+.about-content {
+  display: flex;
+  margin-bottom: 120px;
+
+  .sticky {
+    width: 220px;
+
+    .sticky-nav {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 130px;
+
+      ul {
+        li {
+          &:not(:last-child) {
+            margin-bottom: 28px;
+          }
+
+          a {
+            display: inline-block;
+            color: #757575;
+            text-transform: uppercase;
+            @include transition;
+
+            &:hover {
+              font-weight: 700;
+              color: #009444;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .content {
+    width: calc(100% - 220px);
+  }
+
+  .block {
+    color: #757575;
+
+    &+.block {
+      margin-top: 120px;
+    }
+
+    .block-title2 {
+      font-size: 24px;
+      font-weight: 700;
+      color: #212121;
+      margin-bottom: 36px;
+    }
+  }
+
+  .ceo-content {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+
+    .left {
+      width: calc(100% - 280px);
+
+      .info {
+        margin-top: 28px;
+        text-align: right;
+
+        strong {
+          display: block;
+          font-weight: 700;
+          color: #009444;
+        }
+      }
+    }
+
+    .img {
+      width: 240px;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .value-content {
+    .item-box {
+      margin-top: 60px;
+      display: flex;
+      gap: 50px;
+
+      .item {
+        width: calc((100% - 100px) / 3);
+        background: #fff;
+        border: 1px solid #E0E0E0;
+        text-align: center;
+        padding: 40px 16px;
+
+        .name {
+          margin: 24px 0 12px;
+          font-size: 16px;
+          font-weight: 700;
+          color: #009444;
+        }
+
+        p {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  .company-content {
+    display: flex;
+    gap: 40px;
+    flex-wrap: wrap;
+
+    .left {
+      width: calc(100% - 360px);
+
+      .name {
+        font-size: 24px;
+        color: #009444;
+        margin-bottom: 24px;
+      }
+
+      .info-box {
+        &:not(:last-child) {
+          margin-bottom: 24px;
+        }
+
+        label {
+          display: block;
+          margin-bottom: 4px;
+        }
+
+        .text {
+          font-size: 16px;
+          color: #212121;
+        }
+      }
+    }
+
+    .img {
+      width: 320px;
+
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  .contact-content {
+    height: 320px;
+    background: url("../img/contact_bg.jpg") no-repeat center center;
+    background-size: cover;
+    padding: 88px 100px;
+
+    .text {
+      font-size: 24px;
+      color: #fff;
+      font-weight: 700;
+      margin-bottom: 24px;
+    }
+
+    .btn {}
   }
 }
