--- a/css/style.css
+++ b/css/style.css
@@ -261,8 +261,7 @@ a {
   padding: 120px 0 150px;
   text-align: center;
   background-size: cover;
-  background-attachment: fixed;
-  min-height: 740px; }
+  background-attachment: fixed; }
   .block_02 .block-title {
     color: #fff; }
   .block_02 .desc {
@@ -506,6 +505,9 @@ a {
       .partner .partnerSwiper .swiper-pagination .swiper-pagination-bullet-active {
         width: 20px;
         opacity: 1; }
+  .partner.service_partner {
+    background: transparent;
+    margin-bottom: 0; }
 
 .block_06 {
   margin-bottom: 100px; }
@@ -764,23 +766,6 @@ a {
       width: 240px; }
       .about-content .ceo-content .img img {
         width: 100%; }
-  .about-content .value-content .item-box {
-    margin-top: 60px;
-    display: flex;
-    gap: 50px; }
-    .about-content .value-content .item-box .item {
-      width: calc((100% - 100px) / 3);
-      background: #fff;
-      border: 1px solid #E0E0E0;
-      text-align: center;
-      padding: 40px 16px; }
-      .about-content .value-content .item-box .item .name {
-        margin: 24px 0 12px;
-        font-size: 16px;
-        font-weight: 700;
-        color: #009444; }
-      .about-content .value-content .item-box .item p {
-        margin-bottom: 0; }
   .about-content .company-content {
     display: flex;
     gap: 40px;
@@ -803,15 +788,216 @@ a {
       width: 320px; }
       .about-content .company-content .img img {
         width: 100%; }
-  .about-content .contact-content {
-    height: 320px;
-    background: url("../img/contact_bg.jpg") no-repeat center center;
-    background-size: cover;
-    padding: 88px 100px; }
-    .about-content .contact-content .text {
-      font-size: 24px;
-      color: #fff;
+
+.value-content .desc {
+  max-width: 940px;
+  color: #757575;
+  margin: 0 auto 60px; }
+.value-content .item-box {
+  margin-top: 60px;
+  display: flex;
+  gap: 50px; }
+  .value-content .item-box .item {
+    width: calc((100% - 100px) / 3);
+    background: #fff;
+    border: 1px solid #E0E0E0;
+    text-align: center;
+    padding: 40px 16px; }
+    .value-content .item-box .item .name {
+      margin: 24px 0 12px;
+      font-size: 16px;
       font-weight: 700;
-      margin-bottom: 24px; }
+      color: #009444; }
+    .value-content .item-box .item p {
+      margin-bottom: 0;
+      color: #757575; }
+.value-content.value-2 {
+  margin-bottom: 100px; }
+
+.contact-content {
+  height: 320px;
+  background: url("../img/contact_bg.jpg") no-repeat center center;
+  background-size: cover;
+  padding: 88px 100px; }
+  .contact-content .text {
+    font-size: 24px;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 24px; }
+
+.accordion .accordion-button {
+  color: #212121;
+  font-size: 16px;
+  font-weight: 700;
+  padding: 20px; }
+  .accordion .accordion-button:focus {
+    outline: none;
+    box-shadow: none; }
+  .accordion .accordion-button::after {
+    width: 24px;
+    height: 24px;
+    background: url("../img/acc_arrow.svg") no-repeat center center;
+    background-size: contain; }
+  .accordion .accordion-button:not(.collapsed) {
+    background: transparent;
+    box-shadow: none; }
+    .accordion .accordion-button:not(.collapsed)::after {
+      background: url("../img/acc_arrow_active.svg") no-repeat center center;
+      background-size: contain; }
+.accordion .accordion-item {
+  border: 1px solid #CFD8DC;
+  background: #fff; }
+  .accordion .accordion-item:not(:last-child) {
+    margin-bottom: 12px; }
+  .accordion .accordion-item:not(:first-of-type) {
+    border-top: 1px solid #CFD8DC; }
+.accordion .accordion-body {
+  padding: 12px 20px 24px;
+  color: #757575; }
+  .accordion .accordion-body p:last-child {
+    margin-bottom: 0; }
+
+.block_services {
+  margin-bottom: 120px; }
+  .block_services .desc {
+    max-width: 940px;
+    color: #757575;
+    margin: 0 auto 60px; }
+  .block_services .content {
+    display: flex;
+    gap: 60px; }
+    .block_services .content .col {
+      width: calc((100% - 60px) / 2); }
+    .block_services .content .img img {
+      width: 100%; }
+
+.block_approach {
+  background: url("../img/approach.jpg") no-repeat center center;
+  color: #E0E0E0;
+  padding: 120px 0 150px;
+  background-size: cover;
+  background-attachment: fixed; }
+  .block_approach .block-title {
+    color: #fff; }
+  .block_approach .desc {
+    max-width: 940px;
+    color: #757575;
+    margin: 0 auto 60px; }
+  .block_approach .item-box {
+    display: flex;
+    gap: 40px; }
+    .block_approach .item-box .item {
+      width: calc((100% - 120px) / 4); }
+      .block_approach .item-box .item .numb {
+        width: 88px;
+        height: 88px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        font-size: 32px;
+        font-weight: bold; }
+      .block_approach .item-box .item .title {
+        margin-top: 24px;
+        font-size: 16px;
+        font-weight: 700;
+        margin-bottom: 16px;
+        color: #fff; }
+      .block_approach .item-box .item ul li {
+        position: relative;
+        padding-left: 22px; }
+        .block_approach .item-box .item ul li:not(:last-child) {
+          margin-bottom: 8px; }
+        .block_approach .item-box .item ul li:before {
+          content: '';
+          display: block;
+          width: 14px;
+          height: 14px;
+          background: url("../img/icon_heart.svg") no-repeat center center;
+          background-size: contain;
+          position: absolute;
+          top: 3px;
+          left: 0; }
+
+.block_why {
+  display: flex;
+  align-items: center;
+  margin: 100px 0;
+  gap: 60px; }
+  .block_why .col {
+    width: calc((100% - 60px) / 2); }
+    .block_why .col.left {
+      padding-left: calc((100vw - 1160px) / 2 + var(--bs-gutter-x,.75rem)); }
+      .block_why .col.left .title {
+        font-size: 32px;
+        font-weight: 700;
+        margin-bottom: 24px; }
+      .block_why .col.left .content {
+        color: #757575; }
+        .block_why .col.left .content p:last-child {
+          margin-bottom: 0; }
+    .block_why .col img {
+      width: 100%; }
+
+.block_faqs {
+  margin-bottom: 120px; }
+  .block_faqs .desc {
+    max-width: 940px;
+    color: #757575;
+    margin: 0 auto 60px; }
+  .block_faqs .content {
+    display: flex;
+    gap: 60px; }
+    .block_faqs .content .col {
+      width: calc((100% - 60px) / 2); }
+      .block_faqs .content .col.right {
+        padding-right: calc((100vw - 1160px) / 2 + var(--bs-gutter-x,.75rem)); }
+    .block_faqs .content img {
+      width: 100%; }
+
+.block_solution {
+  display: flex;
+  margin-bottom: 100px; }
+  .block_solution .item {
+    display: flex;
+    width: calc(100% / 3);
+    height: 540px;
+    position: relative;
+    padding-left: 40px;
+    align-items: center;
+    color: #fff; }
+    .block_solution .item:before {
+      content: '';
+      display: block;
+      width: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: #212121;
+      opacity: .4;
+      transition: ease-in 0.3s; }
+    .block_solution .item:hover:before {
+      opacity: .6; }
+    .block_solution .item .content {
+      position: relative; }
+      .block_solution .item .content .desc {
+        font-size: 18px;
+        margin-bottom: 12px; }
+      .block_solution .item .content .name {
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 36px; }
+      .block_solution .item .content .btn-outline-white {
+        border: 1px solid #fff;
+        color: #fff;
+        padding: 9px 36px;
+        transition: ease-in 0.3s; }
+        .block_solution .item .content .btn-outline-white:hover {
+          background: #fff;
+          color: #212121;
+          opacity: 1; }
 
 /*# sourceMappingURL=style.css.map */
