--- a/scss/style.scss
+++ b/scss/style.scss
@@ -361,6 +361,8 @@ a {
       font-size: 16px;
       margin-bottom: 60px;
       max-width: 724px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .btn-outline-white {
@@ -2024,5 +2026,14 @@ a {
 
   @include tablet {
     margin-bottom: 60px;
+  }
+  .desc {
+    padding-top: 168px;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+    font-style: italic;
   }
 }
