--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2016,6 +2016,143 @@ a {
   }
 }
 
+.block_news{
+  display: flex;
+  @include tablet {
+    flex-direction: column;
+  }
+  .block{
+    &:nth-child(1) {
+      flex: 1 1 auto;
+      padding: 30px;
+      padding-left: 0;
+    }
+    &:nth-child(2) {
+      flex: 0 0 300px;
+    }
+    &.list_content{
+      .list_item:hover{
+        opacity: .7;
+      }
+    }
+    .list_item {
+      display: flex;
+      margin-bottom: 50px;
+      cursor: pointer;
+      @include tablet {
+        margin-bottom: 20px;
+      }
+      .thumb{
+        width: 50%;
+        max-width: 400px;
+        margin-right: 60px;
+        flex-shrink: 0;
+        @include tablet {
+          margin-right: 10px;
+        }
+        img{
+          height: 100%;
+          object-fit: cover;
+          width: 100%;
+        }
+      }
+      &-text {
+        flex: auto;
+        color: #212121;
+      }
+      &-date {
+        font-size: 1.1rem;
+        color: #656565;
+        font-weight: 500;
+        letter-spacing: .05em;
+        margin-right: 20px;
+        @include tablet {
+          font-size: 1rem;
+        }
+      }
+      &-title {
+        font-size: 1.4rem;
+        margin-bottom: 15px;
+        @include tablet {
+          font-size: 1.2rem;
+        }
+      }
+      &-preview{
+        font-size: 1.1rem;
+        @include tablet {
+          font-size: 1rem;
+        }
+      }
+    }
+    .list_new,
+    .list_archive {
+      padding: 20px 0 50px;
+      border-top: 1px solid #d4d4d4;
+      position: relative;
+      &:before {
+        content: "";
+        position: absolute;
+        top: -1px;
+        left: 0;
+        width: 30%;
+        height: 2px;
+        background-color: #009444;
+      }
+      .list_item {
+        .thumb {
+          width: 33%;
+          margin-right: 10px;
+          overflow: hidden;
+          margin-right: 10px;
+          img {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            object-fit: cover;
+            object-position: center;
+          }
+        }
+        &-title {
+          font-size: 1rem;
+          -webkit-line-clamp: 2;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+        }
+      }
+    }
+    .list_title {
+      text-transform: uppercase;
+      font-size: 1.1rem;
+      color: #009444;
+      margin-bottom: 20px;
+      font-weight: 700;
+    }
+    .list_archive{
+      .list_item{
+        border-bottom: 1px dotted #ddd;
+        padding: 10px;
+        margin-bottom: 0;
+        justify-content: space-between;
+        &::after {
+          content: "";
+          width: 24px;
+          height: 24px;
+          background-image: url("../img/arrow_right.svg");
+          background-repeat: no-repeat;
+          background-size: contain;
+          transform: scale(1.3);
+        }
+        &:hover:after{
+          transform: scale(1.3) translate(3px,0);
+          transition: .3s;
+        }
+      }
+    }
+  }
+}
+
 .block_img {
   height: 360px;
   background: url("../img/halong.jpg") no-repeat center center;
