--- a/css/style.css
+++ b/css/style.css
@@ -1697,6 +1697,29 @@ a {
 .block_news .block.list_content .list_item:hover {
   opacity: 0.7;
 }
+.block_news .block.list_content .pagination {
+  padding: 50px 0 0;
+  justify-content: center;
+}
+.block_news .block.list_content .pagination a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  font-size: 1.1rem;
+  line-height: 40px;
+  background: #fff;
+  text-align: center;
+  margin: 0 5px;
+  border: 1px solid #009444;
+  color: #009444;
+}
+.block_news .block.list_content .pagination a.current {
+  color: #fff;
+  background: #009444;
+}
+.block_news .block.list_content .pagination a.disable {
+  display: none;
+}
 .block_news .block .list_item {
   display: flex;
   margin-bottom: 50px;
@@ -1708,7 +1731,7 @@ a {
   }
 }
 .block_news .block .list_item .thumb {
-  width: 50%;
+  width: 40%;
   max-width: 400px;
   margin-right: 60px;
   flex-shrink: 0;
@@ -1742,6 +1765,7 @@ a {
 .block_news .block .list_item-title {
   font-size: 1.4rem;
   margin-bottom: 15px;
+  font-weight: 700;
 }
 @media (max-width: 1023px) {
   .block_news .block .list_item-title {
@@ -1821,6 +1845,32 @@ a {
 .block_news .block .list_archive .list_item:hover:after {
   transform: scale(1.3) translate(3px, 0);
   transition: 0.3s;
+}
+.block_news .block.detail {
+  padding: 0 30px 0 0;
+}
+.block_news .block.detail > * {
+  margin-bottom: 10px;
+}
+.block_news .block.detail .detail-title {
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 1.5;
+  margin-bottom: 10px;
+}
+.block_news .block.detail .detail-thumb img {
+  height: auto;
+  display: inline-block;
+  width: 870px;
+  max-width: 100%;
+  margin-bottom: 30px;
+}
+.block_news .block.detail .detail-content img {
+  display: block;
+  margin: 0 auto;
+}
+.block_news .block.detail .detail-content a {
+  text-decoration: underline;
 }
 
 .block_img {
