--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2016,67 +2016,110 @@ a {
   }
 }
 
-.block_news{
+.block_news {
   display: flex;
+
   @include tablet {
     flex-direction: column;
   }
-  .block{
+
+  .block {
     &:nth-child(1) {
       flex: 1 1 auto;
       padding: 30px;
       padding-left: 0;
     }
+
     &:nth-child(2) {
       flex: 0 0 300px;
     }
-    &.list_content{
-      .list_item:hover{
+
+    &.list_content {
+      .list_item:hover {
         opacity: .7;
       }
+
+      .pagination {
+        padding: 50px 0 0;
+        justify-content: center;
+
+        a {
+          display: block;
+          width: 40px;
+          height: 40px;
+          font-size: 1.1rem;
+          line-height: 40px;
+          background: #fff;
+          text-align: center;
+          margin: 0 5px;
+          border: 1px solid #009444;
+          color: #009444;
+
+          &.current {
+            color: #fff;
+            background: #009444;
+          }
+
+          &.disable {
+            display: none
+          }
+        }
+      }
     }
+
     .list_item {
       display: flex;
       margin-bottom: 50px;
       cursor: pointer;
+
       @include tablet {
         margin-bottom: 20px;
       }
+
       .thumb{
-        width: 50%;
+        width: 40%;
         max-width: 400px;
         margin-right: 60px;
         flex-shrink: 0;
+
         @include tablet {
           margin-right: 10px;
         }
+
         img{
           height: 100%;
           object-fit: cover;
           width: 100%;
         }
       }
+
       &-text {
         flex: auto;
         color: #212121;
       }
+
       &-date {
         font-size: 1.1rem;
         color: #656565;
         font-weight: 500;
         letter-spacing: .05em;
         margin-right: 20px;
+
         @include tablet {
           font-size: 1rem;
         }
       }
+
       &-title {
         font-size: 1.4rem;
         margin-bottom: 15px;
+        font-weight: 700;
+
         @include tablet {
           font-size: 1.2rem;
         }
       }
+
       &-preview{
         font-size: 1.1rem;
         @include tablet {
@@ -2084,11 +2127,13 @@ a {
         }
       }
     }
+
     .list_new,
     .list_archive {
       padding: 20px 0 50px;
       border-top: 1px solid #d4d4d4;
       position: relative;
+
       &:before {
         content: "";
         position: absolute;
@@ -2098,12 +2143,14 @@ a {
         height: 2px;
         background-color: #009444;
       }
+
       .list_item {
         .thumb {
           width: 33%;
           margin-right: 10px;
           overflow: hidden;
           margin-right: 10px;
+
           img {
             width: 100%;
             height: 100%;
@@ -2112,6 +2159,7 @@ a {
             object-position: center;
           }
         }
+
         &-title {
           font-size: 1rem;
           -webkit-line-clamp: 2;
@@ -2122,6 +2170,7 @@ a {
         }
       }
     }
+
     .list_title {
       text-transform: uppercase;
       font-size: 1.1rem;
@@ -2129,12 +2178,14 @@ a {
       margin-bottom: 20px;
       font-weight: 700;
     }
-    .list_archive{
-      .list_item{
+
+    .list_archive {
+      .list_item {
         border-bottom: 1px dotted #ddd;
         padding: 10px;
         margin-bottom: 0;
         justify-content: space-between;
+
         &::after {
           content: "";
           width: 24px;
@@ -2144,9 +2195,47 @@ a {
           background-size: contain;
           transform: scale(1.3);
         }
-        &:hover:after{
+
+        &:hover:after {
           transform: scale(1.3) translate(3px,0);
           transition: .3s;
+        }
+      }
+    }
+
+    &.detail {
+      padding: 0 30px 0 0;
+
+      >* {
+          margin-bottom: 10px;
+      }
+
+      .detail {
+        
+        &-title {
+          font-size: 3rem;
+          font-weight: 700;
+          line-height: 1.5;
+          margin-bottom: 10px;
+        }
+
+        &-thumb img {
+          height: auto;
+          display: inline-block;
+          width: 870px;
+          max-width: 100%;
+          margin-bottom: 30px;
+        }
+
+        &-content {
+          img {
+            display: block;
+            margin: 0 auto;
+          }
+
+          a {
+            text-decoration: underline;
+          }
         }
       }
     }
