--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,9 @@ a {
   .main-slider .swiper-slide .desc {
     font-size: 16px;
     margin-bottom: 60px;
-    max-width: 724px; }
+    max-width: 724px;
+    margin-left: auto;
+    margin-right: auto; }
   .main-slider .swiper-slide .btn-outline-white {
     height: 54px;
     border: 1px solid #fff;
@@ -1073,27 +1075,22 @@ a {
   margin-bottom: 100px; }
   @media (max-width: 1023px) {
     .block_solution {
-      margin-bottom: 80px; } }
-  @media (max-width: 480px) {
-    .block_solution {
+      margin-bottom: 80px;
       flex-wrap: wrap; } }
   .block_solution .item {
-    display: flex;
     width: calc(100% / 3);
     height: 540px;
     position: relative;
-    padding-left: 40px;
-    align-items: center;
+    padding: 7vw 30px 0;
     color: #fff; }
     @media (max-width: 1279px) {
       .block_solution .item {
         height: 480px; } }
     @media (max-width: 1023px) {
       .block_solution .item {
-        height: 420px; } }
-    @media (max-width: 480px) {
-      .block_solution .item {
-        width: 100%; } }
+        height: 420px;
+        width: 100%;
+        padding-top: 100px; } }
     .block_solution .item:before {
       content: '';
       display: block;
@@ -1111,12 +1108,14 @@ a {
     .block_solution .item .content {
       position: relative; }
       .block_solution .item .content .desc {
-        font-size: 18px;
-        margin-bottom: 12px; }
+        font-size: 1.1vw; }
+        @media (max-width: 1023px) {
+          .block_solution .item .content .desc {
+            font-size: 16px; } }
       .block_solution .item .content .name {
-        font-size: 32px;
+        font-size: 2vw;
         font-weight: 700;
-        margin-bottom: 36px; }
+        margin-bottom: 24px; }
         @media (max-width: 1023px) {
           .block_solution .item .content .name {
             font-size: 24px; } }
@@ -1262,5 +1261,13 @@ a {
   @media (max-width: 1023px) {
     .block_img {
       margin-bottom: 60px; } }
+  .block_img .desc {
+    padding-top: 168px;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    font-size: 24px;
+    font-weight: 700;
+    font-style: italic; }
 
 /*# sourceMappingURL=style.css.map */
