--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1724,19 +1724,14 @@ a {
 
   @include tablet {
     margin-bottom: 80px;
-  }
-
-  @include mobile {
     flex-wrap: wrap;
   }
 
   .item {
-    display: flex;
     width: calc(100% / 3);
     height: 540px;
     position: relative;
-    padding-left: 40px;
-    align-items: center;
+    padding: 7vw 30px 0;
     color: #fff;
 
     @include ipad_pro {
@@ -1745,10 +1740,8 @@ a {
 
     @include tablet {
       height: 420px;
-    }
-
-    @include mobile {
       width: 100%;
+      padding-top: 100px;
     }
 
 
@@ -1776,14 +1769,17 @@ a {
       position: relative;
 
       .desc {
-        font-size: 18px;
-        margin-bottom: 12px;
+        font-size: 1.1vw;
+
+        @include tablet {
+          font-size: 16px;
+        }
       }
 
       .name {
-        font-size: 32px;
+        font-size: 2vw;
         font-weight: 700;
-        margin-bottom: 36px;
+        margin-bottom: 24px;
 
         @include tablet {
           font-size: 24px;
